[gd_scene load_steps=39 format=3 uid="uid://d107yydyx6iyq"]

[ext_resource type="Script" path="res://Scripts/Dice/D100.gd" id="1_o1yo0"]
[ext_resource type="Texture2D" uid="uid://cq8caolatom81" path="res://Art/Dice/D10.png" id="2_xeqwq"]
[ext_resource type="FontFile" uid="uid://d4nmlc0ojikdb" path="res://Fonts/712_serif.ttf" id="4_7mpdh"]
[ext_resource type="Texture2D" uid="uid://b1lytwp28l3ft" path="res://Art/colorPicking/Trashcan/TrashcanNormal.png" id="5_8by6u"]
[ext_resource type="Texture2D" uid="uid://bvx1xwpau1y6c" path="res://Art/colorPicking/Trashcan/TrashcanHover.png" id="6_dmvx1"]
[ext_resource type="Texture2D" uid="uid://dns1ldtkwlc7b" path="res://Art/colorPicking/PaintBucket/Bucket.png" id="7_qwgcr"]
[ext_resource type="Texture2D" uid="uid://baprf3w76e3v8" path="res://Art/Dice/D8.png" id="8_ibspx"]
[ext_resource type="Texture2D" uid="uid://b1hjvqwrore3o" path="res://Art/colorPicking/PaintBucket/Paint.png" id="8_lye8u"]

[sub_resource type="LabelSettings" id="LabelSettings_e25fr"]
font = ExtResource("4_7mpdh")
font_size = 80
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="FontVariation" id="FontVariation_7d6l4"]
base_font = ExtResource("4_7mpdh")
variation_transform = Transform2D(1, 1, 0, 1, 0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_5yrc7"]
font = SubResource("FontVariation_7d6l4")
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="FontVariation" id="FontVariation_t24mo"]
base_font = ExtResource("4_7mpdh")
variation_transform = Transform2D(1, -1, 0, 1, 0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_4fxyg"]
font = SubResource("FontVariation_t24mo")
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="FontVariation" id="FontVariation_ycmrb"]
base_font = ExtResource("4_7mpdh")
variation_transform = Transform2D(1, -0.5, 0, 1, 0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_u6u02"]
font = SubResource("FontVariation_ycmrb")
font_size = 30
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="FontVariation" id="FontVariation_weo70"]
base_font = ExtResource("4_7mpdh")
variation_transform = Transform2D(1, 0.5, 0, 1, 0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_vvwnw"]
font = SubResource("FontVariation_weo70")
font_size = 30
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_cj6ws"]
font = ExtResource("4_7mpdh")
font_size = 80
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_h6lcy"]
font = SubResource("FontVariation_7d6l4")
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_id5bc"]
font = SubResource("FontVariation_t24mo")
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_mwu43"]
font = SubResource("FontVariation_ycmrb")
font_size = 30
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_acxrx"]
font = SubResource("FontVariation_weo70")
font_size = 30
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gxmjq"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.439216, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dq6xw"]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.439216, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g4fvn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ul31e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_anff4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lr2jb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i0sdr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1lo26"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ohvnw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0pywo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_voxy8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yygmy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8n8om"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_122lb"]

[sub_resource type="LabelSettings" id="LabelSettings_qatod"]
font = ExtResource("4_7mpdh")
font_size = 30
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_or06s"]
font = ExtResource("4_7mpdh")
font_size = 30
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="D100" type="Control" node_paths=PackedStringArray("mainLabel", "mainPercentile", "allLabels", "allPercentile", "die", "diePercentile", "colorPickerButton", "colorButtonPercentile", "colorPicker", "colorPickerPercentile", "colorPickerBackground", "colorBackgroundPercentile", "textButton", "textButtonPercentile", "textColorPicker", "textPickerPercentile", "textColorBackground", "textBackgroundPercentile", "swatchSet", "allSwatches")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -276.0
offset_bottom = -724.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 150)
script = ExtResource("1_o1yo0")
mainLabel = NodePath("Die/Labels/RolledNumber")
mainPercentile = NodePath("DiePercentile/Labels/RolledNumber")
allLabels = [NodePath("Die/Labels/TopLeft"), NodePath("Die/Labels/TopRight"), NodePath("Die/Labels/BottomLeft"), NodePath("Die/Labels/BottomRight")]
allPercentile = [NodePath("DiePercentile/Labels/TopLeft"), NodePath("DiePercentile/Labels/TopRight"), NodePath("DiePercentile/Labels/BottomLeft"), NodePath("DiePercentile/Labels/BottomRight")]
die = NodePath("Die")
diePercentile = NodePath("DiePercentile")
colorPickerButton = NodePath("ColorButton")
colorButtonPercentile = NodePath("ColorButtonPercentile")
colorPicker = NodePath("ColorButton/DieColorPicker")
colorPickerPercentile = NodePath("ColorButtonPercentile/DieColorPicker")
colorPickerBackground = NodePath("ColorButton/ColorRect")
colorBackgroundPercentile = NodePath("ColorButtonPercentile/ColorRect")
textButton = NodePath("TextColorButton")
textButtonPercentile = NodePath("TextButtonPercentile")
textColorPicker = NodePath("TextColorButton/TextColorPicker")
textPickerPercentile = NodePath("TextButtonPercentile/TextColorPicker")
textColorBackground = NodePath("TextColorButton/ColorRect")
textBackgroundPercentile = NodePath("TextButtonPercentile/ColorRect")
swatchSet = NodePath("SwatchPanel")
allSwatches = [NodePath("SwatchPanel/Swatch"), NodePath("SwatchPanel/Swatch2"), NodePath("SwatchPanel/Swatch3"), NodePath("SwatchPanel/Swatch4")]

[node name="Die" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 326.0
offset_top = 50.0
offset_right = 526.0
offset_bottom = 250.0
pivot_offset = Vector2(100, 100)
texture_normal = ExtResource("2_xeqwq")
ignore_texture_size = true
stretch_mode = 0

[node name="Labels" type="Control" parent="Die"]
layout_mode = 1
anchors_preset = 0

[node name="RolledNumber" type="Label" parent="Die/Labels"]
layout_mode = 0
offset_left = 64.0
offset_top = 72.0
offset_right = 144.0
offset_bottom = 132.0
text = "0"
label_settings = SubResource("LabelSettings_e25fr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopLeft" type="Label" parent="Die/Labels"]
layout_mode = 0
offset_left = 5.0
offset_top = 98.0
offset_right = 45.0
offset_bottom = 121.0
text = "8"
label_settings = SubResource("LabelSettings_5yrc7")
horizontal_alignment = 1

[node name="TopRight" type="Label" parent="Die/Labels"]
layout_mode = 0
offset_left = 156.0
offset_top = 99.0
offset_right = 196.0
offset_bottom = 122.0
text = "2"
label_settings = SubResource("LabelSettings_4fxyg")
horizontal_alignment = 1

[node name="BottomLeft" type="Label" parent="Die/Labels"]
layout_mode = 0
offset_left = 85.0
offset_top = 168.0
offset_right = 125.0
offset_bottom = 191.0
rotation = 3.14159
text = "5"
label_settings = SubResource("LabelSettings_u6u02")
horizontal_alignment = 1

[node name="BottomRight" type="Label" parent="Die/Labels"]
layout_mode = 0
offset_left = 150.0
offset_top = 171.0
offset_right = 190.0
offset_bottom = 194.0
rotation = 3.14159
text = "3"
label_settings = SubResource("LabelSettings_vvwnw")
horizontal_alignment = 1

[node name="DiePercentile" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 250.0
offset_bottom = 250.0
pivot_offset = Vector2(100, 100)
texture_normal = ExtResource("2_xeqwq")
ignore_texture_size = true
stretch_mode = 0

[node name="Labels" type="Control" parent="DiePercentile"]
layout_mode = 1
anchors_preset = 0

[node name="RolledNumber" type="Label" parent="DiePercentile/Labels"]
layout_mode = 0
offset_left = 64.0
offset_top = 72.0
offset_right = 144.0
offset_bottom = 132.0
text = "00"
label_settings = SubResource("LabelSettings_cj6ws")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopLeft" type="Label" parent="DiePercentile/Labels"]
layout_mode = 0
offset_left = 5.0
offset_top = 98.0
offset_right = 45.0
offset_bottom = 121.0
text = "80"
label_settings = SubResource("LabelSettings_h6lcy")
horizontal_alignment = 1

[node name="TopRight" type="Label" parent="DiePercentile/Labels"]
layout_mode = 0
offset_left = 156.0
offset_top = 99.0
offset_right = 196.0
offset_bottom = 122.0
text = "20"
label_settings = SubResource("LabelSettings_id5bc")
horizontal_alignment = 1

[node name="BottomLeft" type="Label" parent="DiePercentile/Labels"]
layout_mode = 0
offset_left = 85.0
offset_top = 168.0
offset_right = 125.0
offset_bottom = 191.0
rotation = 3.14159
text = "50"
label_settings = SubResource("LabelSettings_mwu43")
horizontal_alignment = 1

[node name="BottomRight" type="Label" parent="DiePercentile/Labels"]
layout_mode = 0
offset_left = 150.0
offset_top = 171.0
offset_right = 190.0
offset_bottom = 194.0
rotation = 3.14159
text = "30"
label_settings = SubResource("LabelSettings_acxrx")
horizontal_alignment = 1

[node name="SwatchPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 50.0
offset_top = -50.0
offset_right = 226.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gxmjq")

[node name="Swatch" type="ColorRect" parent="SwatchPanel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 91.0
offset_top = 7.0
offset_right = -350.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(17.5, 17.5)

[node name="SwatchBorder" type="Panel" parent="SwatchPanel/Swatch"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 37.0
offset_bottom = 36.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dq6xw")

[node name="SwatchButton" type="Button" parent="SwatchPanel/Swatch"]
layout_mode = 0
offset_left = -4.0
offset_top = -19.0
offset_right = 44.0
offset_bottom = 49.0
theme_override_colors/font_hover_color = Color(0.415686, 0.415686, 0.415686, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_7mpdh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_g4fvn")
text = "+"
flat = true

[node name="Control" type="Control" parent="SwatchPanel/Swatch/SwatchButton"]
anchors_preset = 0
offset_left = 4.0
offset_right = 39.0
offset_bottom = 19.0

[node name="Control2" type="Control" parent="SwatchPanel/Swatch/SwatchButton"]
anchors_preset = 0
offset_left = 39.0
offset_top = 7.0
offset_right = 51.0
offset_bottom = 62.0

[node name="Control3" type="Control" parent="SwatchPanel/Swatch/SwatchButton"]
anchors_preset = 0
offset_left = 4.0
offset_top = 54.0
offset_right = 39.0
offset_bottom = 62.0

[node name="Control4" type="Control" parent="SwatchPanel/Swatch/SwatchButton"]
anchors_preset = 0
offset_left = -4.0
offset_top = 11.0
offset_right = 4.0
offset_bottom = 62.0

[node name="Swatch2" type="ColorRect" parent="SwatchPanel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 177.0
offset_top = 8.0
offset_right = -264.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(17.5, 17.5)

[node name="SwatchBorder" type="Panel" parent="SwatchPanel/Swatch2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 37.0
offset_bottom = 36.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dq6xw")

[node name="SwatchButton" type="Button" parent="SwatchPanel/Swatch2"]
layout_mode = 0
offset_left = -4.0
offset_top = -19.0
offset_right = 44.0
offset_bottom = 49.0
theme_override_colors/font_hover_color = Color(0.415686, 0.415686, 0.415686, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_7mpdh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_ul31e")
text = "+"
flat = true

[node name="Control" type="Control" parent="SwatchPanel/Swatch2/SwatchButton"]
anchors_preset = 0
offset_left = 4.0
offset_right = 39.0
offset_bottom = 19.0

[node name="Control2" type="Control" parent="SwatchPanel/Swatch2/SwatchButton"]
anchors_preset = 0
offset_left = 39.0
offset_top = 7.0
offset_right = 51.0
offset_bottom = 62.0

[node name="Control3" type="Control" parent="SwatchPanel/Swatch2/SwatchButton"]
anchors_preset = 0
offset_left = 4.0
offset_top = 54.0
offset_right = 39.0
offset_bottom = 62.0

[node name="Control4" type="Control" parent="SwatchPanel/Swatch2/SwatchButton"]
anchors_preset = 0
offset_left = -4.0
offset_top = 11.0
offset_right = 4.0
offset_bottom = 62.0

[node name="Swatch3" type="ColorRect" parent="SwatchPanel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 262.0
offset_top = 7.0
offset_right = -179.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(17.5, 17.5)

[node name="SwatchBorder" type="Panel" parent="SwatchPanel/Swatch3"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 37.0
offset_bottom = 36.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dq6xw")

[node name="SwatchButton" type="Button" parent="SwatchPanel/Swatch3"]
layout_mode = 0
offset_left = -4.0
offset_top = -19.0
offset_right = 44.0
offset_bottom = 49.0
theme_override_colors/font_hover_color = Color(0.415686, 0.415686, 0.415686, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_7mpdh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_g4fvn")
text = "+"
flat = true

[node name="Control" type="Control" parent="SwatchPanel/Swatch3/SwatchButton"]
anchors_preset = 0
offset_left = 4.0
offset_right = 39.0
offset_bottom = 19.0

[node name="Control2" type="Control" parent="SwatchPanel/Swatch3/SwatchButton"]
anchors_preset = 0
offset_left = 39.0
offset_top = 7.0
offset_right = 51.0
offset_bottom = 62.0

[node name="Control3" type="Control" parent="SwatchPanel/Swatch3/SwatchButton"]
anchors_preset = 0
offset_left = 4.0
offset_top = 54.0
offset_right = 39.0
offset_bottom = 62.0

[node name="Control4" type="Control" parent="SwatchPanel/Swatch3/SwatchButton"]
anchors_preset = 0
offset_left = -4.0
offset_top = 11.0
offset_right = 4.0
offset_bottom = 62.0

[node name="Swatch4" type="ColorRect" parent="SwatchPanel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 348.0
offset_top = 7.0
offset_right = -93.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(17.5, 17.5)

[node name="SwatchBorder" type="Panel" parent="SwatchPanel/Swatch4"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 37.0
offset_bottom = 36.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dq6xw")

[node name="SwatchButton" type="Button" parent="SwatchPanel/Swatch4"]
layout_mode = 0
offset_left = -4.0
offset_top = -19.0
offset_right = 44.0
offset_bottom = 49.0
theme_override_colors/font_hover_color = Color(0.415686, 0.415686, 0.415686, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_7mpdh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_g4fvn")
text = "+"
flat = true

[node name="Control" type="Control" parent="SwatchPanel/Swatch4/SwatchButton"]
anchors_preset = 0
offset_left = 4.0
offset_right = 39.0
offset_bottom = 19.0

[node name="Control2" type="Control" parent="SwatchPanel/Swatch4/SwatchButton"]
anchors_preset = 0
offset_left = 39.0
offset_top = 7.0
offset_right = 51.0
offset_bottom = 62.0

[node name="Control3" type="Control" parent="SwatchPanel/Swatch4/SwatchButton"]
anchors_preset = 0
offset_left = 4.0
offset_top = 54.0
offset_right = 39.0
offset_bottom = 62.0

[node name="Control4" type="Control" parent="SwatchPanel/Swatch4/SwatchButton"]
anchors_preset = 0
offset_left = -4.0
offset_top = 11.0
offset_right = 4.0
offset_bottom = 62.0

[node name="Trashcan" type="TextureButton" parent="SwatchPanel"]
layout_mode = 0
offset_left = 429.0
offset_top = 3.0
offset_right = 469.0
offset_bottom = 43.0
pivot_offset = Vector2(20, 20)
texture_normal = ExtResource("5_8by6u")
texture_hover = ExtResource("6_dmvx1")
ignore_texture_size = true
stretch_mode = 0

[node name="ColorButton" type="Button" parent="."]
layout_mode = 0
offset_left = 329.0
offset_right = 369.0
offset_bottom = 40.0
scale = Vector2(1.5, 1.5)
theme_override_styles/focus = SubResource("StyleBoxEmpty_anff4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lr2jb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_i0sdr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1lo26")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ohvnw")

[node name="Outline" type="ColorRect" parent="ColorButton"]
layout_mode = 0
offset_left = 17.0
offset_top = 13.0
offset_right = 27.0
offset_bottom = 23.0
color = Color(0, 0, 0, 1)

[node name="Dice" type="TextureRect" parent="ColorButton"]
layout_mode = 0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 40.0
texture = ExtResource("2_xeqwq")
expand_mode = 1

[node name="Bucket" type="TextureRect" parent="ColorButton"]
layout_mode = 0
offset_left = 15.0
offset_right = 40.0
offset_bottom = 25.0
texture = ExtResource("7_qwgcr")
expand_mode = 1

[node name="Paint" type="TextureRect" parent="ColorButton"]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 28.0
offset_bottom = 25.0
texture = ExtResource("8_lye8u")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="ColorButton"]
visible = false
layout_mode = 0
offset_left = 6.5
offset_top = 40.0
offset_right = 125.5
offset_bottom = 229.0

[node name="DieColorPicker" type="ColorPicker" parent="ColorButton"]
visible = false
layout_mode = 0
offset_left = 6.66667
offset_top = 41.0
offset_right = 304.667
offset_bottom = 512.0
scale = Vector2(0.4, 0.4)
edit_alpha = false
deferred_mode = true
can_add_swatches = false
presets_visible = false

[node name="TextColorButton" type="Button" parent="."]
layout_mode = 0
offset_left = 465.0
offset_right = 505.0
offset_bottom = 40.0
scale = Vector2(1.5, 1.5)
theme_override_styles/focus = SubResource("StyleBoxEmpty_0pywo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_voxy8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yygmy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8n8om")
theme_override_styles/normal = SubResource("StyleBoxEmpty_122lb")

[node name="Outline" type="ColorRect" parent="TextColorButton"]
layout_mode = 0
offset_left = 17.0
offset_top = 13.0
offset_right = 27.0
offset_bottom = 23.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TextColorButton"]
layout_mode = 0
offset_left = 6.00001
offset_top = 16.0
offset_right = 25.0
offset_bottom = 39.0
text = "1"
label_settings = SubResource("LabelSettings_qatod")

[node name="Bucket" type="TextureRect" parent="TextColorButton"]
layout_mode = 0
offset_left = 15.3333
offset_right = 40.3333
offset_bottom = 25.0
texture = ExtResource("7_qwgcr")
expand_mode = 1

[node name="Paint" type="TextureRect" parent="TextColorButton"]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 28.0
offset_bottom = 25.0
texture = ExtResource("8_lye8u")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="TextColorButton"]
visible = false
layout_mode = 0
offset_left = -86.5
offset_top = 40.0
offset_right = 32.5
offset_bottom = 229.0

[node name="TextColorPicker" type="ColorPicker" parent="TextColorButton"]
visible = false
layout_mode = 0
offset_left = -86.6667
offset_top = 41.0
offset_right = 211.333
offset_bottom = 512.0
scale = Vector2(0.4, 0.4)
edit_alpha = false
deferred_mode = true
can_add_swatches = false
presets_visible = false

[node name="ColorButtonPercentile" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_right = 90.0
offset_bottom = 40.0
scale = Vector2(1.5, 1.5)
theme_override_styles/focus = SubResource("StyleBoxEmpty_anff4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lr2jb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_i0sdr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1lo26")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ohvnw")

[node name="Outline" type="ColorRect" parent="ColorButtonPercentile"]
layout_mode = 0
offset_left = 17.0
offset_top = 13.0
offset_right = 27.0
offset_bottom = 23.0
color = Color(0, 0, 0, 1)

[node name="Dice" type="TextureRect" parent="ColorButtonPercentile"]
layout_mode = 0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 40.0
texture = ExtResource("8_ibspx")
expand_mode = 1

[node name="Bucket" type="TextureRect" parent="ColorButtonPercentile"]
layout_mode = 0
offset_left = 15.0
offset_right = 40.0
offset_bottom = 25.0
texture = ExtResource("7_qwgcr")
expand_mode = 1

[node name="Paint" type="TextureRect" parent="ColorButtonPercentile"]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 28.0
offset_bottom = 25.0
texture = ExtResource("8_lye8u")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="ColorButtonPercentile"]
visible = false
layout_mode = 0
offset_left = 6.5
offset_top = 40.0
offset_right = 125.5
offset_bottom = 229.0

[node name="DieColorPicker" type="ColorPicker" parent="ColorButtonPercentile"]
visible = false
layout_mode = 0
offset_left = 6.66667
offset_top = 41.0
offset_right = 304.667
offset_bottom = 512.0
scale = Vector2(0.4, 0.4)
edit_alpha = false
deferred_mode = true
can_add_swatches = false
presets_visible = false

[node name="TextButtonPercentile" type="Button" parent="."]
layout_mode = 0
offset_left = 190.0
offset_right = 230.0
offset_bottom = 40.0
scale = Vector2(1.5, 1.5)
theme_override_styles/focus = SubResource("StyleBoxEmpty_0pywo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_voxy8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yygmy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8n8om")
theme_override_styles/normal = SubResource("StyleBoxEmpty_122lb")

[node name="Outline" type="ColorRect" parent="TextButtonPercentile"]
layout_mode = 0
offset_left = 17.0
offset_top = 13.0
offset_right = 27.0
offset_bottom = 23.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TextButtonPercentile"]
layout_mode = 0
offset_left = 6.00001
offset_top = 16.0
offset_right = 25.0
offset_bottom = 39.0
text = "1"
label_settings = SubResource("LabelSettings_or06s")

[node name="Bucket" type="TextureRect" parent="TextButtonPercentile"]
layout_mode = 0
offset_left = 15.3333
offset_right = 40.3333
offset_bottom = 25.0
texture = ExtResource("7_qwgcr")
expand_mode = 1

[node name="Paint" type="TextureRect" parent="TextButtonPercentile"]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 28.0
offset_bottom = 25.0
texture = ExtResource("8_lye8u")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="TextButtonPercentile"]
visible = false
layout_mode = 0
offset_left = -86.5
offset_top = 40.0
offset_right = 32.5
offset_bottom = 229.0

[node name="TextColorPicker" type="ColorPicker" parent="TextButtonPercentile"]
visible = false
layout_mode = 0
offset_left = -86.6667
offset_top = 41.0
offset_right = 211.333
offset_bottom = 512.0
scale = Vector2(0.4, 0.4)
edit_alpha = false
deferred_mode = true
can_add_swatches = false
presets_visible = false

[connection signal="pressed" from="Die" to="." method="_onDiePressed"]
[connection signal="pressed" from="DiePercentile" to="." method="_onDiePressed" binds= [false]]
[connection signal="pressed" from="SwatchPanel/Swatch/SwatchButton" to="." method="_onSwatchButtonPressed" binds= [0]]
[connection signal="pressed" from="SwatchPanel/Swatch2/SwatchButton" to="." method="_onSwatchButtonPressed" binds= [1]]
[connection signal="pressed" from="SwatchPanel/Swatch3/SwatchButton" to="." method="_onSwatchButtonPressed" binds= [2]]
[connection signal="pressed" from="SwatchPanel/Swatch4/SwatchButton" to="." method="_onSwatchButtonPressed" binds= [3]]
[connection signal="pressed" from="SwatchPanel/Trashcan" to="." method="_onTrashcanPressed"]
[connection signal="pressed" from="ColorButton" to="." method="_onTextureButtonPressed"]
[connection signal="color_changed" from="ColorButton/DieColorPicker" to="." method="_onDieColorPickerColorChanged"]
[connection signal="pressed" from="TextColorButton" to="." method="_onTextColorButtonPressed"]
[connection signal="color_changed" from="TextColorButton/TextColorPicker" to="." method="_onTextColorPickerColorChanged"]
[connection signal="pressed" from="ColorButtonPercentile" to="." method="_onColorButtonPercentilePressed"]
[connection signal="color_changed" from="ColorButtonPercentile/DieColorPicker" to="." method="_onPercentileColorPickerColorChanged"]
[connection signal="pressed" from="TextButtonPercentile" to="." method="_onTextButtonPercentilePressed"]
[connection signal="color_changed" from="TextButtonPercentile/TextColorPicker" to="." method="_onTextPercentileColorPickerColorChanged"]
